# scales_causal

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
notebooks/: 1008_SSP5-3.4-EXT_analysis.py  1009_causal_emulation-SSP534-EXT.py  2000_clean_emulation_workflow.py  3000_analyse_forced_response.py  3000_analyse_ssp245.py  3000_generate_forced_response.py  ensemble_all_links.csv
outputs/SSP5-34-EXT/: ensemble_link_differences.csv
src/scales_cv/: analysis.py  emulation.py  util.py
