[project]
authors = [
    { name = "Annika Högner", email = "hoegner@iiasa.ac.at"},
]
requires-python = ">=3.9"
dependencies = [
    "pre-commit>=3.3.1",
    "jupyterlab>=4.0.0",
    "jupytext>=1.15.2",
    "tigramite>=5.2.10.1",
    "pandas>=2.3.3",
    "pandas-indexing>=0.6.3",
    "cftime>=1.6.4.post1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "xarray>=2024.7.0",
    "tqdm>=4.67.1",
    "netcdf4>=1.7.2",
    "regionmask>=0.12.1",
    "cartopy>=0.23.0",
    "statsmodels>=0.14.6",
    "networkx>=3.2.1",
    "joblib>=1.5.3",
    "scikit-learn>=1.6.1",
]
name = "scales_cv"
version = "0.1.0"
description = "prototype for the causal variability module in SCALES"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
ignore = [
    "D200",
    "D400",
    "UP007",
]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"
